--- a/Develop/package.json
+++ b/Develop/package.json
@@ -8,7 +8,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.5.2"
+    "inquirer": "^6.5.2",
+    "util": "^0.12.3"
   },
   "description": ""
 }
